+ added support for ACM codec configuration (via IAMStreamConfig interface)
+ added support for stream selection via IAMStreamSelect interface
+ added decoder performance testing tool
+ pressing "Enter" in the filters form will create a new instance of a filter
+ added "Locate" button to find filter DLL files quickly
+ added "Unregister" feature to remove filters. (works also for missing DLLs)

[0.2.7.0 - Beta	   24/July/2008]
+ added support for Enhanced Video Renderer
+ added support for DMO objects (but it's not possible to duplicate "CTRL-D" a DMO filter once created)

[0.2.6.0 - Beta    22/June/2008]
+ fixed bug with bad offset of VIDEOINFOHEADER2 extradata
+ added support for VFW property pages
+ added support for IAMVideoCompression interface

[0.2.5.0 - Beta	   17/June/2008]
+ added seeking dialog
+ added WAVEFORMATEXTENSIBLE parsing
+ added additional extradata parsing after VIDEOINFOHEADER & VIDEOINFOHEADER2
+ added some new GUIDs
+ added new event scheduling dialog
+ added support for schedule events via XML

[0.2.4.0 - Beta    11/May/2008]
+ added graph clock control and filter icons

[0.2.3.0 - Beta    27/Apr/2008]
+ added some more XML filter interfaces (mainly monogram filters)
+ added ALLOCATOR_PROPERTIES information for pin connection
+ added "Progress View" form
+ fixed a strange menu event problem
+ added volume & balance controls for filters exposing the IBasicAudio interface
+ MPEG1VIDEOINFO and MPEG2VIDEOINFO now displays sequence header data
+ added internal dump filter
+ added shortcuts to Null Renderer & Dump into the rightclick menu

[0.2.2.0 - Beta    24/Mar/2008]
+ added frame-step button
+ values in property pages can now be selected and put into clipboard
+ added key shortcuts (ESC = stop, Space = Play/Pause toggle, Right arrow = frame step)
+ GraphStudio now displays list of available media types for unconnected pins
+ GraphStudio can accept a filename to open via command line
+ added graph refresh feature (Ctrl+F5)