@@ -498,13 +498,13 @@ FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     DEFPUSHBUTTON   "OK",IDOK,60,96,50,14
     PUSHBUTTON      "Cancel",IDCANCEL,114,96,50,14
-    LTEXT           "You are about to change merit for the following filter :",IDC_STATIC,6,6,174,8
+    LTEXT           "You are about to change the merit for the following filter :",IDC_STATIC,6,6,186,8
     CTEXT           "Static",IDC_STATIC_FILTER,6,24,234,18
     LTEXT           "Note: These changes may be applied after the next system login",IDC_STATIC,6,117,208,8
     LTEXT           "Original value",IDC_STATIC,6,49,44,8
-    EDITTEXT        IDC_EDIT_ORIGINAL,60,48,180,12,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_ORIGINAL,60,48,180,12,ES_AUTOHSCROLL | ES_READONLY
     LTEXT           "New value",IDC_STATIC,6,67,34,8
-    COMBOBOX        IDC_COMBO_NEW,60,66,180,96,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_COMBO_NEW,60,66,180,96,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
 END
 
 
